default/objects/Delivery_Schedule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Delivery Schedules</relationshipLabel>
    <relationshipName>Delivery_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>